--- a/app/views/Games/detail.html
+++ b/app/views/Games/detail.html
@@ -22,6 +22,9 @@
             初日#{/if}#{else}${d}日目#{/else}</a>
     #{/list}
     </div>
+    <div class="btn-group">
+        <a href="@{Games.index(village.villageId,null)}#form" class="btn">最新</a>
+    </div>
 </div>
 
 <table class="table">
