--- a/app/views/Options/update.html
+++ b/app/views/Options/update.html
@@ -4,7 +4,7 @@
 #{set 'navi'}
 <ul class="nav nav-tabs nav-stacked">
     <li>
-        <a href="@{Games.index(village.villageId,null)}">もどる</a>
+        <a href="@{Games.index(village.villageId,null,null)}">もどる</a>
     </li>
 </ul>
 #{/set}
