--- a/app/views/Games/index.html
+++ b/app/views/Games/index.html
@@ -4,37 +4,37 @@
     #{script src:'village.js'/}
 #{/set}
 #{set 'navi'}
-<table class="table">
-    #{if village.state == models.enums.State.Epilogue||village.state == models.enums.State.Closed}
-        #{list items:members, as:'member'}
-            <tr>
-                <td>
-                ${member.name}#{if member.user!=null}(${member.user.name})#{/if}<br/>
-                ${member.skill.label} #{if !member.alive}死亡#{/if}#{else}生存#{/else}
-                </td>
-            </tr>
-        #{/list}
-    #{/if}
-    #{else}
-        #{list items:members, as:'member'}
-            <tr>
-                <td>
-                ${member.name}<br/>
-                    #{if !member.alive}死亡#{/if}#{else}生存#{/else}
-                </td>
-            </tr>
-        #{/list}
-    #{/else}
 
-    <tr>
-        <td>
-            残り時間 : <span id="time">0</span>
-        </td>
-    </tr>
-</table>
-
-
-
+<div class="accordion-group">
+    <div class="accordion-heading">
+        <a class="accordion-toggle" data-toggle="collapse" data-target="#members">参加者</a>
+    </div>
+    <div id="members" class="collapse">
+        <table class="table">
+            #{if village.state == models.enums.State.Epilogue||village.state == models.enums.State.Closed}
+                #{list items:members, as:'member'}
+                    <tr>
+                        <td>
+                        ${member.name}#{if member.user!=null}(${member.user.name})#{/if}<br/>
+                        ${member.skill.label} #{if !member.alive}死亡#{/if}#{else}生存#{/else}
+                        </td>
+                    </tr>
+                #{/list}
+            #{/if}
+            #{else}
+                #{list items:members, as:'member'}
+                    <tr>
+                        <td>
+                        ${member.name}<br/>
+                            #{if !member.alive}死亡#{/if}#{else}生存#{/else}
+                        </td>
+                    </tr>
+                #{/list}
+            #{/else}
+        </table>
+    </div>
+</div>
+<p>残り時間 : <span id="time">0</span></p>
 
     #{if admin && village.state == models.enums.State.Prologue}
     <!-- 管理 -->
