--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/public/stylesheets/bootstrap.min.css">
 #{get 'moreStyles' /}
     <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
-    <script src="@{'/public/javascripts/jquery-1.9.1.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+    <script src="@{'/public/javascripts/jquery-1.9.1.min.js'}" type="text/javascript"
+            charset="${_response_encoding}"></script>
     <script src="@{'/public/javascripts/bootstrap.min.js'}"></script>
     <script src="@{'/public/javascripts/main.js'}"></script>
 #{get 'moreScripts' /}
@@ -19,12 +20,14 @@
             <ul class="nav pull-right">
                 <li><a href="/"><i class="icon-home icon-white"></i>Home</a></li>
                 <li></li> #{if session.user_id == null}
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Login<b class="caret"></b></a>
+                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Login<b
+                        class="caret"></b></a>
 
                     <div class="dropdown-menu dropdown-form">
                         <form accept-charset="UTF-8" action="@{Accounts.login}" method="post">
                             <fieldset class='textbox'>
-                                <label><span>名前</span><input type="text" name="name" autocomplete="on"/></label> <label><span>パスワード</span><input type="password" name="pass"/></label>
+                                <label><span>名前</span><input type="text" name="name" autocomplete="on"/></label> <label><span>パスワード</span><input
+                                    type="password" name="pass"/></label>
                             </fieldset>
                             <fieldset class="subchck">
                                 <button type="submit" class="btn submit pull-right">ログイン</button>
@@ -42,8 +45,12 @@
 </div>
 <div class="container">
     <div class="row" id="main">
-        <div class="span4">#{get 'navi' /}</div>
-        <div class="span8">#{doLayout /}</div>
+        <div class="row-fluid row">
+            <div class="span4">
+                <div class="left-navigation sidebar-nav-fixed">#{get 'navi' /}</div>
+            </div>
+            <div class="span8 span-fixed-sidebar">#{doLayout /}</div>
+        </div>
     </div>
 </div>
 </body>
