--- a/app/views/Games/index.html
+++ b/app/views/Games/index.html
@@ -5,7 +5,7 @@
 #{/set}
 #{set 'navi'}
 
-<div class="accordion-group">
+<div id="accordion-members" class="accordion-group">
     <div class="accordion-heading">
         <a class="accordion-toggle" data-toggle="collapse" data-target="#members">参加者</a>
     </div>
