終了した村には最新ボタンはいらない

--- a/app/views/Games/index.html
+++ b/app/views/Games/index.html
@@ -84,9 +84,11 @@
             初日#{/if}#{else}${d}日目#{/else}</a>
     #{/list}
     </div>
+#{if village.state != models.enums.State.Epilogue}
     <div class="btn-group">
         <a href="@{Games.index(village.villageId,null,null)}#form" class="btn">最新</a>
     </div>
+#{/if}
 </div>
 
 #{set seeroar : finished || (me!=null && me.skill.group == models.enums.Group.Wolf) /}
