--- a/app/views/Games/detail.html
+++ b/app/views/Games/detail.html
@@ -22,9 +22,11 @@
             初日#{/if}#{else}${d}日目#{/else}</a>
     #{/list}
     </div>
+#{if village.state != models.enums.State.Epilogue}
     <div class="btn-group">
         <a href="@{Games.index(village.villageId,null,null)}#form" class="btn">最新</a>
     </div>
+#{/if}
 </div>
 
 <table class="table">
