--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -36,6 +36,9 @@
 .log_say {
     border-left: 10px solid #dddddd;
 }
+.log_say:first-child {
+    width: 80px;
+}
 
 .log_wisper {
     background: #888888;
